--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-server.port=8080
+server.port=9090
+
+#database properties
+## MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/user_schema
+spring.datasource.username=root
+spring.datasource.password=1234
+
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
+
+
+logging.level.org.springframework=INFO
+logging.level.com.mkyong=INFO
+logging.level.com.zaxxer=DEBUG
+logging.level.root=ERROR
