--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,31 @@
 server.port=9090
 
 #database properties
-## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/user_schema
-spring.datasource.username=root
-spring.datasource.password=1234
-
 #`hibernate_sequence' doesn't exist
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 # drop n create table, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
-
 
 logging.level.org.springframework=INFO
 logging.level.com.mkyong=INFO
 logging.level.com.zaxxer=DEBUG
 logging.level.root=ERROR
+
+#---------MySql db----------
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/AppDB
+spring.datasource.username=root
+spring.datasource.password=Vicky@1993
+
+#---------H2 SETTINGS----------
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=sa
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+# Custom H2 Console URL
+spring.h2.console.path=/h2
