--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,19 +13,8 @@ logging.level.root=ERROR
 
 #---------MySql db----------
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/AppDB
 spring.datasource.username=root
 spring.datasource.password=Vicky@1993
-
-#---------H2 SETTINGS----------
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=sa
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# Enabling H2 Console
-spring.h2.console.enabled=true
-
-# Custom H2 Console URL
-spring.h2.console.path=/h2
+        
