--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 server.port=9090
 
-#database properties
-#`hibernate_sequence' doesn't exist
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-
-# drop n create table, good for testing, comment this in production
-
-logging.level.org.springframework=INFO
-logging.level.com.mkyong=INFO
-logging.level.com.zaxxer=DEBUG
-logging.level.root=ERROR
-
-#---------MySql db----------
-
-spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/AppDB
 spring.datasource.username=root
 spring.datasource.password=Vicky@1993
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+spring.jpa.database = MYSQL
+
+spring.jpa.show-sql = true
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
         
