--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
+hibernate.current_session_context_class=thread
+
         
