Chart and PDF generator

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
             <version>5.5.10</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.knowm.xchart/xchart -->
+        <dependency>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
