--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 hibernate.current_session_context_class=thread
 
+java -Djava.awt.headless=true
+
+
         
